latest changes
Signed-off-by: Easterday, John <john.easterday@intel.com>