@@ -15,12 +15,12 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.List;
 
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Attribute;
 import org.jsoup.nodes.Document;
+import org.jsoup.nodes.Element;
 import org.jsoup.select.Elements;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -32,15 +32,13 @@ import org.springframework.stereotype.Service;
 @Service
 public class OnDieCache {
 
-  private final boolean autoUpdate;
+  private boolean autoUpdate = false;
 
-  private final String cacheDir;
+  private String cacheDir = "";
 
   private final List<URL> sourceUrl = new ArrayList<URL>();
 
   private HashMap<String, byte[]> cacheMap = new HashMap<String, byte[]>();
-
-  private boolean initialized;
 
   private final String cacheUpdatedTouchFile = "cache_updated";
 
@@ -60,7 +58,7 @@ public class OnDieCache {
     if (sourceUrlList != null && !sourceUrlList.isEmpty()) {
       String[] urls = sourceUrlList.split(",");
       for (String url : urls) {
-        this.sourceUrl.add(new URL(url));
+        this.sourceUrl.add(new URL(url.trim()));
       }
     } else {
       // defaults: the public facing sites containing OnDie artifacts
@@ -68,62 +66,67 @@ public class OnDieCache {
       this.sourceUrl.add(new URL("https://tsci.intel.com/content/OnDieCA/crls/"));
     }
 
-    this.cacheDir = cacheDir;
-    this.autoUpdate = autoUpdate;
-    if (autoUpdate) {
-      // update local cache
-      copyFromUrlSources();
+    if (cacheDir != null) {
+      File cache = new File(cacheDir);
+      if (!cache.exists()) {
+        throw new IOException("OnDieCertCache: cache directory does not exist: " + cacheDir);
+      }
+      if (!cache.isDirectory()) {
+        throw new IOException("OnDieCertCache: cache directory must be a directory: " + cacheDir);
+      }
+
+      this.cacheDir = cacheDir;
+      this.autoUpdate = autoUpdate;
+      if (autoUpdate) {
+        // update local cache
+        copyFromUrlSources();
+      }
+      loadCacheMap();
     }
-    initialized = false;
   }
 
 
   /**
    * Copy the certs and CRLs from the URL sources to the cache directory.
    *
-   * @throws Exception if error
    */
-  private void copyFromUrlSources() throws Exception {
+  private void copyFromUrlSources() {
 
-    if (this.cacheDir == null) {
-      throw new Exception("OnDieCache: cache directory must be specfied.");
-    }
     File cache = new File(cacheDir);
     if (!cache.exists()) {
       cache.mkdir();
     }
 
-    BufferedReader in = null;
     try {
       for (URL url : this.sourceUrl) {
         URLConnection urlConn = url.openConnection();
-        in = new BufferedReader(new InputStreamReader(
-          urlConn.getInputStream()));
+        try (BufferedReader in = new BufferedReader(new InputStreamReader(
+            urlConn.getInputStream()))) {
 
-        // loop through all the href entries and for each .crl and .cer
-        // links, download the file and store locally
-        Document doc = Jsoup.connect(url.toString()).get();
-        Elements elements = doc.select("a[href]");
-        for (int i = 0; i < elements.size(); i++) {
-          Iterator<Attribute> iattr = elements.get(i).attributes().iterator();
-          while (iattr.hasNext()) {
-            Attribute attr = iattr.next();
-            if (attr.getKey().equals("href")) {
-              String hrefValue = attr.getValue();
-              if (hrefValue.contains(".cer") || hrefValue.contains(".crl")) {
-                URL fileUrl = new URL(url, hrefValue);
-                byte[] fileBytes = fileUrl.openConnection().getInputStream().readAllBytes();
-                Files.write(Paths.get(cacheDir, hrefValue), fileBytes);
+          // loop through all the href entries and for each .crl and .cer
+          // links, download the file and store locally
+          Document doc = Jsoup.connect(url.toString()).get();
+          Elements elements = doc.select("a[href]");
+          if (elements != null) {
+            for (Element e : elements) {
+              if (e != null) {
+                for (Attribute attr : e.attributes()) {
+                  if (attr.getKey().equals("href")) {
+                    String hrefValue = attr.getValue();
+                    if (hrefValue.contains(".cer") || hrefValue.contains(".crl")) {
+                      URL fileUrl = new URL(url, hrefValue);
+                      byte[] fileBytes = fileUrl.openConnection().getInputStream().readAllBytes();
+                      Files.write(Paths.get(cacheDir, hrefValue), fileBytes);
+                    }
+                  }
+                }
               }
             }
           }
         }
-        in.close();
       }
-    } catch (Exception ex) {
+    } catch (IOException ex) {
       LoggerFactory.getLogger(getClass()).debug(ex.getMessage(), ex);
-    } finally {
-      in.close();
     }
   }
 
@@ -133,44 +136,47 @@ public class OnDieCache {
    * @throws Exception if error
    */
   private void loadCacheMap() throws IOException {
-    if (initialized) {
-      return;
-    }
     if (cacheDir != null) {
       File cache = new File(cacheDir);
-      if (!cache.exists()) {
-        throw new IOException("OnDieCertCache: cache directory does not exist: " + cacheDir);
-      }
-
-      // check for the "files updated" touch file
-      if (Files.exists(Paths.get(cache.getAbsolutePath(), cacheUpdatedTouchFile))) {
-        // rename all .new files and remove touch file
-        FilenameFilter filter = (dir, name) -> name.endsWith(".new");
-        File[] files = new File(cache.getAbsolutePath()).listFiles(filter);
-        for (File file: files) {
-          File targetFile = new File(file.getAbsolutePath().replaceAll(".new",""));
-          targetFile.delete();
-          file.renameTo(targetFile);
-          file.delete();
-        }
-        Files.delete(Paths.get(cacheDir, cacheUpdatedTouchFile));
-      }
 
       // Read each file and load into the hashmap
       File[] files = new File(cache.getAbsolutePath()).listFiles();
       if (files != null) {
         for (File file : files) {
           if (!file.isDirectory()) {
-            if (file.getName().toLowerCase().endsWith(".cer")
-                || file.getName().toLowerCase().endsWith(".crl")) {
+            if (file.getName().toLowerCase().endsWith(".crl")
+                || file.getName().toLowerCase().endsWith(".cer")) {
               cacheMap.put(file.getName(), Files.readAllBytes(Paths.get(file.getAbsolutePath())));
             }
           }
         }
       }
     }
-    initialized = true;
   }
+
+
+  private boolean isCacheUpdateNeeded() throws IOException {
+    if (cacheDir != null) {
+      File cache = new File(cacheDir);
+
+      // check for the "files updated" touch file
+      if (Files.exists(Paths.get(cache.getAbsolutePath(), cacheUpdatedTouchFile))) {
+        // rename all .new files and remove touch file
+        FilenameFilter filter = (dir, name) -> name.endsWith(".new");
+        File[] files = new File(cache.getAbsolutePath()).listFiles(filter);
+        for (File file : files) {
+          File targetFile = new File(file.getAbsolutePath().replaceAll(".new", ""));
+          targetFile.delete();
+          file.renameTo(targetFile);
+          file.delete();
+        }
+        Files.delete(Paths.get(cacheDir, cacheUpdatedTouchFile));
+        return true;
+      }
+    }
+    return false;
+  }
+
 
   /**
    * Returns the certificate or CRL corresponding to the specified pathname.
@@ -181,14 +187,21 @@ public class OnDieCache {
    * @return byte[] cert or crl bytes
    * @throws Exception if error
    */
-  public byte[] getCertOrCrl(String pathName) throws IOException {
-    if (cacheDir == null) {
-      throw new IOException("OnDieCertCache: cache directory not specified.");
+  public byte[] getCertOrCrl(String pathName) throws IOException, IllegalArgumentException {
+    if (isCacheUpdateNeeded()) {
+      loadCacheMap();  // initialize cache if not yet initialized
     }
-    loadCacheMap();  // initialize cache if not yet initialized
+
     URL url = new URL(pathName);
+    if (url == null) {
+      throw new IllegalArgumentException("OnDieCache: illegal crl reference: " + pathName);
+    }
     Path path = Paths.get(url.getFile());
-    return cacheMap.get(path.getFileName().toString());
+    Path fileName = path.getFileName();
+    if (fileName == null) {
+      throw new IllegalArgumentException("OnDieCache: illegal crl reference: " + pathName);
+    }
+    return cacheMap.get(fileName.toString());
   }
 
   /**
@@ -222,13 +235,5 @@ public class OnDieCache {
     return count;
   }
 
-  /**
-   * Returns onlineUpdate setting.
-   *
-   * @return
-   */
-  public boolean getAutoUpdate() {
-    return this.autoUpdate;
-  }
 }
 
